# routes/channels.php
@@ -1,0 +1,7 @@
+<?php
+
+use Illuminate\Support\Facades\Broadcast;
+
+Broadcast::channel('chat.{chatId}', function ($user, $chatId) {
+    return $user->chats()->where('chats.id', $chatId)->exists();
+});
